added simplified version of logarithms

--- a/README.html
+++ b/README.html
@@ -358,7 +358,9 @@ display: none;
 <ul>
 <li><a href="https://globalfamilies.quarto.pub/parenting/">https://globalfamilies.quarto.pub/parenting/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/be-less-wrong/">https://globalfamilies.quarto.pub/be-less-wrong/</a></li>
-<li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a></li>
+<li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a>
+| (<a href="https://globalfamilies.quarto.pub/logarithms-simple/">simplified
+version</a>)</li>
 </ul>
 </div>
 
