--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://globalfamilies.quarto.pub/parenting/">https://globalfamilies.quarto.pub/parenting/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/be-less-wrong/">https://globalfamilies.quarto.pub/be-less-wrong/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a></li>
-<li><a href="https://globalfamilies.quarto.pub/logarithms/">https://globalfamilies.quarto.pub/logarithms/</a></li>
+<li><a href="https://globalfamilies.quarto.pub/logarithms/">https://globalfamilies.quarto.pub/logarithms/</a> | (<a href="https://globalfamilies.quarto.pub/logarithms-simple/">simplified version</a>)</li>
 </ul>
 
 </main>
