Add higher resolution hawks2.png image

--- a/logarithms/logarithms.html
+++ b/logarithms/logarithms.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-10-26">
+<meta name="dcterms.date" content="2025-10-28">
 
 <title>Logarithms</title>
 <style>
@@ -104,10 +104,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
---cr-section-background-color: white;
+          --cr-section-background-color: white;
 --cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-overlay: grey;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -132,7 +132,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 26, 2025</p>
+      <p class="date">October 28, 2025</p>
     </div>
   </div>
   
@@ -354,7 +354,7 @@ e
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="hawk.png" class="img-fluid figure-img"></p>
+<p><img src="hawk2.png" class="img-fluid figure-img"></p>
 <figcaption>Spiral Flight of Hawk from <span class="citation" data-cites="Livio2002">Livio (<a href="#ref-Livio2002" role="doc-biblioref">2002</a>)</span></figcaption>
 </figure>
 </div>
