added social share

--- a/logarithms/logarithms-simple.html
+++ b/logarithms/logarithms-simple.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-10-28">
+<meta name="dcterms.date" content="2025-11-21">
 
 <title>Logarithms</title>
 <style>
@@ -59,6 +59,8 @@ div.csl-indent {
 <script src="logarithms-simple_files/libs/quarto-contrib/intersection-observer-polyfill-1.0.0/intersection-observer.js"></script>
 <script src="logarithms-simple_files/libs/quarto-contrib/scrollama-3.2.0/scrollama.min.js"></script>
 <script src="logarithms-simple_files/libs/quarto-contrib/closeread-0.1.0/closeread.js"></script>
+<link href="logarithms-simple_files/libs/quarto-contrib/social-share-1.0.0/social-share.css" rel="stylesheet">
+<link href="logarithms-simple_files/libs/quarto-contrib/social-share-1.0.0/all.min.css" rel="stylesheet">
 <meta cr-debug-mode="false">
 <meta cr-remove-header-space="false">
 
@@ -104,10 +106,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: grey;
---cr-section-background-color: white;
+          --cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-sidebar: white;
---cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-overlay: grey;
+--cr-section-background-color: white;
         }
       </style>
     
@@ -132,7 +134,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 28, 2025</p>
+      <p class="date">November 21, 2025</p>
     </div>
   </div>
   
@@ -740,6 +742,7 @@ Livio, Mario. 2002. <em>The Golden Ratio: The Story of Phi, the World’s Most A
   });
   </script>
 </div> <!-- /content -->
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://www.linkedin.com/shareArticle?url=https://globalfamilies.quarto.pub/logarithms-simple/&amp;title=Looking for Intuitive Explanations of an Elusive Concept" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=Looking for Intuitive Explanations of an Elusive Concept&amp;body=Check out this link:https://globalfamilies.quarto.pub/logarithms-simple/" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://globalfamilies.quarto.pub/logarithms-simple/" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://globalfamilies.quarto.pub/logarithms-simple/&amp;title=Looking for Intuitive Explanations of an Elusive Concept" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=Looking for Intuitive Explanations of an Elusive Concept https://globalfamilies.quarto.pub/logarithms-simple/'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a><a href="https://bsky.app/intent/compose?text=https://globalfamilies.quarto.pub/logarithms-simple/ Looking for Intuitive Explanations of an Elusive Concept" target="_blank" class="bsky"><i class="fa-brands fa-bluesky"></i></a></div></div>
 
 
 
