--- a/normativeness-of-violence/normativeness-of-violence.html
+++ b/normativeness-of-violence/normativeness-of-violence.html
@@ -84,9 +84,9 @@ ul.task-list li input[type="checkbox"] {
   
   classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
   
-  abuse[physical abuse]:::red --&gt; aggression[child aggression]:::yellow
+  abuse[physical abuse]:::red --&gt; |"???"| aggression[child aggression]:::yellow
 
-  linkStyle 0 stroke:#000000,stroke-width:3px,color:black;
+  linkStyle 0 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
 </pre>
 </div>
@@ -115,7 +115,7 @@ ul.task-list li input[type="checkbox"] {
   
   direction LR
 
-  abuse0[physical abuse]:::red --&gt; aggression0[child aggression]:::yellow
+  abuse0[physical abuse]:::red --&gt; |"???"| aggression0[child aggression]:::yellow
   
   end
   
@@ -123,11 +123,11 @@ ul.task-list li input[type="checkbox"] {
   
   direction LR
 
-  abuse1[physical abuse]:::red --&gt; aggression1[child aggression]:::yellow
+  abuse1[physical abuse]:::red --&gt; |"???"| aggression1[child aggression]:::yellow
   
   end
 
-  linkStyle 0,1 stroke:#000000,stroke-width:3px,color:black;
+  linkStyle 0,1 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
   style lowerviolence fill: #F2F2F2
 
