added and modified Abstract text; added map of MICS countries

--- a/normativeness-of-violence/normativeness-of-violence.html
+++ b/normativeness-of-violence/normativeness-of-violence.html
@@ -6,6 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="Global Families Research Team">
+<meta name="dcterms.date" content="2025-11-25">
 
 <title>Normativeness of Violence and Associations Between Caregiver Physical Abuse and Child Aggression</title>
 <style>
@@ -38,6 +40,15 @@ ul.task-list li input[type="checkbox"] {
 <script src="normativeness-of-violence_files/libs/quarto-diagram/mermaid.min.js"></script>
 <script src="normativeness-of-violence_files/libs/quarto-diagram/mermaid-init.js"></script>
 <link href="normativeness-of-violence_files/libs/quarto-diagram/mermaid.css" rel="stylesheet">
+<link href="normativeness-of-violence_files/libs/htmltools-fill-0.5.8.1/fill.css" rel="stylesheet">
+<script src="normativeness-of-violence_files/libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
+<script src="normativeness-of-violence_files/libs/plotly-binding-4.10.4/plotly.js"></script>
+<script src="normativeness-of-violence_files/libs/typedarray-0.1/typedarray.min.js"></script>
+<script src="normativeness-of-violence_files/libs/jquery-3.5.1/jquery.min.js"></script>
+<link href="normativeness-of-violence_files/libs/crosstalk-1.2.1/css/crosstalk.min.css" rel="stylesheet">
+<script src="normativeness-of-violence_files/libs/crosstalk-1.2.1/js/crosstalk.min.js"></script>
+<link href="normativeness-of-violence_files/libs/plotly-htmlwidgets-css-2.11.1/plotly-htmlwidgets.css" rel="stylesheet">
+<script src="normativeness-of-violence_files/libs/plotly-main-2.11.1/plotly-latest.min.js"></script>
 
 
 </head>
@@ -57,7 +68,19 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-title-meta">
 
+    <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+             <p><a href="https://globalfamilies.quarto.pub/global-families-project/">Global Families Research Team</a> </p>
+          </div>
+  </div>
     
+    <div>
+    <div class="quarto-title-meta-heading">Published</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date">November 25, 2025</p>
+    </div>
+  </div>
   
     
   </div>
@@ -67,6 +90,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<p>This study examined whether the associations between caregiver physical abuse and aggressive behaviors among 3- to 4-year-old children in low- and middle-income countries (LMICs).</p>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div id="fig-question-1" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -99,6 +123,7 @@ Figure&nbsp;1
 </div>
 </div>
 </div>
+<p>We also examined whether these associations are different or similar in contexts with high levels of macro-level violence (physical abuse, intimate partner violence, and terrorism and political violence).</p>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div id="fig-question-2" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -149,6 +174,22 @@ Figure&nbsp;2
 </div>
 </div>
 </div>
+<p>We analyzed cross-sectional data from 79,806 households across 53 LMICs using the UNICEF Multiple Indicator Cluster Surveys.</p>
+<div class="cell">
+<div id="fig-MICS-countries" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-MICS-countries-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="plotly html-widget html-fill-item" id="htmlwidget-1856aec2f963e1281755" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-1856aec2f963e1281755">{"x":{"visdat":{"12747ea4abe3":["function () ","plotlyVisDat"]},"cur_data":"12747ea4abe3","attrs":{"12747ea4abe3":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"robinson"},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-MICS-countries-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;3: Countries in UNICEF MICS Data
+</figcaption>
+</figure>
+</div>
+</div>
+<p>Multilevel logistic regression models examined main effects and interaction effects of household-level caregiver physical abuse and measures of country-level violence.</p>
+<p>The results revealed that physical abuse is associated with higher aggression in children.</p>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div id="fig-result-1" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -169,18 +210,19 @@ Figure&nbsp;2
   
   abuse[physical abuse]:::red --&gt; aggression[child aggression]:::yellow
 
-  linkStyle 0 stroke:#000000,stroke-width:5px,font-size:36px,color:black;
+  linkStyle 0 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
 </pre>
 </div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig quarto-uncaptioned" id="fig-result-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;3
+Figure&nbsp;4
 </figcaption>
 </figure>
 </div>
 </div>
 </div>
+<p>There were some contextual variations in these associations. However, findings demonstrate that both severe and moderate physical abuse are consistently associated with increased odds of child aggression across countries, underscoring the universality of this risk.</p>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div id="fig-result-2" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -215,7 +257,7 @@ Figure&nbsp;3
   
   end
 
-  linkStyle 0,1 stroke:#000000,stroke-width:5px,font-size:36px,color:black;
+  linkStyle 0,1 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
   style lowerviolence fill: #F2F2F2
 
@@ -225,12 +267,13 @@ Figure&nbsp;3
 </div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig quarto-uncaptioned" id="fig-result-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;4
+Figure&nbsp;5
 </figcaption>
 </figure>
 </div>
 </div>
 </div>
+<p>These findings emphasize that physical abuse poses a significant threat to child development in diverse global contexts and highlight the need for contextually-responsive policy interventions aimed at reducing physically abusive practices worldwide.</p>
 
 </main>
 <!-- /main column -->
