--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
+<meta name="dcterms.date" content="2025-11-27">
 
 <title>closeread Projects</title>
 <style>
@@ -61,6 +62,12 @@ ul.task-list li input[type="checkbox"] {
           </div>
   </div>
     
+    <div>
+    <div class="quarto-title-meta-heading">Published</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date">November 27, 2025</p>
+    </div>
+  </div>
   
     
   </div>
@@ -76,6 +83,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://globalfamilies.quarto.pub/be-less-wrong/">https://globalfamilies.quarto.pub/be-less-wrong/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/logarithms/">https://globalfamilies.quarto.pub/logarithms/</a> | (<a href="https://globalfamilies.quarto.pub/logarithms-simple/">simplified version</a>)</li>
+<li><a href="https://globalfamilies.quarto.pub/normativeness-of-violence/">https://globalfamilies.quarto.pub/normativeness-of-violence/</a></li>
 </ul>
 
 </main>
