now points to index.html

--- a/README.html
+++ b/README.html
@@ -355,13 +355,7 @@ display: none;
 <div id="closeread" class="section level1">
 <h1>closeread</h1>
 <p><code>closeread</code> <em>scrollytelling</em> projects using <a href="https://closeread.dev/">https://closeread.dev/</a></p>
-<ul>
-<li><a href="https://globalfamilies.quarto.pub/parenting/">https://globalfamilies.quarto.pub/parenting/</a></li>
-<li><a href="https://globalfamilies.quarto.pub/be-less-wrong/">https://globalfamilies.quarto.pub/be-less-wrong/</a></li>
-<li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a>
-| (<a href="https://globalfamilies.quarto.pub/logarithms-simple/">simplified
-version</a>)</li>
-</ul>
+<p>See <a href="https://agrogan1.github.io/closeread/">https://agrogan1.github.io/closeread/</a></p>
 </div>
 
 
